<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_media">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="settings_header">Настройки</string>
    <string name="btn_night_theme">Темная тема</string>
    <string name="btn_share_app">Поделиться приложением</string>
    <string name="btn_write_support">Написать в поддержку</string>
    <string name="btn_user_agreement">Пользовательское соглашение</string>
    <string name="btn_back">Назад</string>
    <string name="ref_yandex_practicum_android">https://practicum.yandex.ru/android-developer</string>
    <string name="ref_yandex_practicum">https://practicum.yandex.ru</string>
    <string name="ref_yandex_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="err_start_activity">Не удалось запустить приложение для</string>
    <string name="search_header">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="base_url">https://itunes.apple.com</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="btn_reload">Обновить</string>
    <string name="btn_clear_history">Очистить историю</string>
    <string name="title_search_history">Вы искали</string>
    <string name="player_header" />
    <string name="track_time_title">Длительность</string>
    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="release_date_title">Год</string>
    <string name="collection_name_title">Альбом</string>
    <string name="share_email">va.kadyrov@yandex.ru</string>
    <string name="share_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="media_header">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_favorite_tracks">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="new_playlist_name">Название</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_btn">Создать</string>
    <string name="covers_path">playlists covers</string>
    <string name="new_playlist_warning_dialog_title">Завершить создание плейлиста?</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="not_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="btn_share">Поделиться приложением</string>
    <string name="btn_edit_playlist">Редактировать информацию</string>
    <string name="btn_delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист</string>
</resources>