<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/main_back"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingBottom="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_btn_size"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/main_text"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/large_text"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/app_name">
        </TextView>
        <Button
            android:layout_width="@dimen/small_btn_size"
            android:layout_height="@dimen/small_btn_size"
            android:visibility="invisible"/>
    </LinearLayout>
    <Button
        android:id="@+id/main_btn_search"
        style="@style/MainBtnStyle"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:icon="@drawable/btn_search"
        android:text="@string/btn_search">
    </Button>
    <Button
        android:id="@+id/main_btn_media"
        style="@style/MainBtnStyle"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:icon="@drawable/btn_media"
        android:text="@string/btn_media">
    </Button>
    <Button
        android:id="@+id/main_btn_settings"
        style="@style/MainBtnStyle"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:icon="@drawable/btn_settings"
        android:text="@string/btn_settings">
    </Button>
</LinearLayout>